--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@
     /*General properties*/
     width: 100vw;
     min-height: 100vh;
-    background: url('/images/background.jpg');
+    background: url('../images/background.jpg');
     background-size: cover;
     background-position: center center;
     /*Display*/
